# glaze

./: .gitmodules
glaze_client/: README.md  pubspec.yaml
glaze_client/android/app/: build.gradle
glaze_client/android/app/src/main/: AndroidManifest.xml
glaze_client/android/app/src/main/kotlin/com/example/glaze_client/: MainActivity.kt
glaze_client/android/app/src/profile/: AndroidManifest.xml
glaze_client/ios/Runner/: Info.plist
glaze_client/ios/Runner.xcodeproj/: project.pbxproj
glaze_client/lib/: action.dart  connect.dart  game.dart  main.dart  prompt.dart
glaze_client/linux/: CMakeLists.txt  my_application.cc
glaze_client/test/: widget_test.dart
glaze_client/web/: index.html  manifest.json
glaze_master/: CMakeLists.txt  cli.cpp  cli.hpp  engine.cpp  engine.hpp  engine_lua_api.cpp  engine_lua_api.hpp  glaze.hpp  main.cpp  test.lua  websocket.cpp  websocket.hpp
glaze_master/lua/: dnd3.5.lua  test.lua
glaze_server/: go.mod  main.go
